--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
                         <div class="col-content">
                             <h3 class="col-title">
-                                Web Application
+                                Web Design
                             </h3>
                             <p>
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo ducimus, nisi qui nostrum natus asperiores.
