--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <div class="content">
             <h1>Welcome to Go-ak.creative.com</h1>
-            <p id="brain">
+            <p id="brian">
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero, voluptatibus.
             </p>
             <a href="#" class="btn">Read More</a>
