--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <p id="brian">
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero, voluptatibus.
             </p>
-            <a href="#" class="btn">Read More</a>
+            <a href="https://yukselbey35.github.io/html_css_practice_blog/" class="btn">Read More</a>
 
 
         </div>
