--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <section id="section-a">
 
             <div class="content">
-                <h2>Application & Development</h2>
+                 <a href="https://www.w3schools.com/html/default.asp"> <h2>Application & Development</h2></a>
                 <p>
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptates, reiciendis quibusdam maxime cumque cum dolor.
                 </p>
