--- a/index.html
+++ b/index.html
@@ -45,9 +45,13 @@
                         <img src="img/1.jpeg" alt="">
 
                         <div class="col-content">
+                            
+                            <a href="https://www.w3schools.com/html/default.asp"> 
+                            
                             <h3 class="col-title">
                                 Web Design
                             </h3>
+                                </a>
                             <p>
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo ducimus, nisi qui nostrum natus asperiores.
                             </p>
